# bruteforce-crc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt  ThreadPool.h  bf_crc.cc  bf_crc.hpp  bruteforce-crc.1  bruteforce-crc.cc  bruteforce-crc.hpp  crc.cc  crc.hpp  generate-test-data.cc  rewrite-as.pl  test.sh  testmessage_1.bits
tests/: test_bruteforce.cc  test_crc.cc
